@@ -22,8 +22,9 @@
  */
 package org.openjdk.bench.java.lang.foreign;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
@@ -47,7 +48,7 @@ import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.concurrent.TimeUnit;
 
-import static java.lang.foreign.ValueLayout.JAVA_INT;
+import static java.lang.foreign.ValueLayout.*;
 
 @BenchmarkMode(Mode.AverageTime)
 @Warmup(iterations = 5, time = 500, timeUnit = TimeUnit.MILLISECONDS)
@@ -78,6 +79,7 @@ public class LoopOverNonConstantMapped extends JavaLayouts {
     }
 
     FileChannel fileChannel;
+    Arena arena;
     MemorySegment segment;
     long unsafe_addr;
 
@@ -93,14 +95,15 @@ public class LoopOverNonConstantMapped extends JavaLayouts {
             ((MappedByteBuffer)byteBuffer).force();
         }
         fileChannel = FileChannel.open(tempPath, StandardOpenOption.READ, StandardOpenOption.WRITE);
-        segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, ALLOC_SIZE, MemorySession.openConfined());
-        unsafe_addr = segment.address().toRawLongValue();
+        arena = Arena.openConfined();
+        segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, ALLOC_SIZE, arena.scope());
+        unsafe_addr = segment.address();
     }
 
     @TearDown
     public void tearDown() throws IOException {
         fileChannel.close();
-        segment.session().close();
+        arena.close();
         unsafe.invokeCleaner(byteBuffer);
     }
 
@@ -145,15 +148,6 @@ public class LoopOverNonConstantMapped extends JavaLayouts {
         int res = 0;
         for (int i = 0; i < ELEM_SIZE; i ++) {
             res += segment.get(JAVA_INT, i * CARRIER_SIZE);
-        }
-        return res;
-    }
-
-    @Benchmark
-    public int segment_loop_instance_address() {
-        int res = 0;
-        for (int i = 0; i < ELEM_SIZE; i ++) {
-            res += segment.address().get(JAVA_INT, i * CARRIER_SIZE);
         }
         return res;
     }
